--- a/html/omnipresencia.html
+++ b/html/omnipresencia.html
@@ -45,7 +45,7 @@
             muchas posibilidades que ofrece la IA. Su implementación no solo ha marcado un mejoramiento tecnológico, sino también ha involucrado a muchas mas empresas que siquiera habían implementado
             uso de software y hardware para sus procesos que hoy en día es una necesidad. Existen otras empresas que se han dedicado de lleno a crear motores de IA.
         </p>
-        <h3>Empresas lideres en IA</h3>
+        <h3>Empresas líderes en IA</h3>
         <div class="container1">
             <div class="box_2">
                 <img src="../image/IBM.png" alt="Imagen" width="100" height="100">
@@ -117,6 +117,22 @@
             </div>
             <div class="contenedor-imagen">
                 <img src="../image/IA_human.jpeg" alt="Imagen" class="imagen-autoajustable">
+            </div>
+        </div>
+    </section>
+    <section id="Causas">
+        <div class="container4">
+            <div class="text2">
+                <h2>
+                    ¿Porqué requerimos de la IA?
+                </h2>
+                <p>La gran gamma de productos que la inteligencia artificial nos ofrece nos ha hecho involucrarnos mas en temas tecnológicos. Debemos de aprender a implementar a la IA en nuestra vida diaria como una herramienta efectiva para la optimización de procesos cotidianos
+                    o inclusive mejorar los que ya teníamos; en ningún momento debemos de sustituir tareas que involucren de nuestro esfuerzo intelectual ni mucho menos que involucren esfuerzo creativo. Usar a la IA de forma responsable no solo nos brindará un complemento excelente para cualquier actividad
+                    sino que también brindará la oportunidad de crecer como personas.
+                </p>
+            </div>
+            <div class="contenedor-imagen2">
+                <img src="../image/dependence.jpg" alt="Imagen" class="imagen-autoajustable">
             </div>
         </div>
     </section>
