--- a/html/omnipresencia.html
+++ b/html/omnipresencia.html
@@ -17,24 +17,26 @@
 
     <nav>
         <ul>
-            <li><a href="#Implementacion">Implementacion</a></li>
-            <li><a href="#Efectos">Efectos</a></li>
-            <li><a href="#Proxima">¿Es necesaria?</a></li>
-            <li><a href="#Causas">¿Porqué la requerimos?</a></li>
+            <li><a href="#Implementacion">IMPLEMENTACIÓN</a></li>
+            <li><a href="#Efectos">EFECTOS</a></li>
+            <li><a href="#Proxima">¿ES NECESARIA?</a></li>
+            <li><a href="#Causas">¿PORQUÉ LA REQUERIMOS?</a></li>
         </ul>
     </nav>
 
-    <section class="box_1">
+    <div class="container">
         <div class="column">
-            <h2>¿Porqué la IA es omnipresente?</h2>
-            <p>La palabra omnipresente significa estar en todos lados al mismo tiempo, cosa que para referirse a la IA no esta nada alejada de la realidad; la IA no solo ha significado un cambio dentro
-                dentro de la industria, sino que amplia el horizonte en tecnología que teniamos hasta ahora, la presencia de esta herramienta no solo ha facilitado muchas tareas sino que también ha significado
-                cambios dentro de software. Claramente no todos pueden ser beneficios como aparentan, sin embargo aún
-                existen cientos de personas que opinan que la IA vino a apoderarse del mundo y en algún momento se revelaría en contra de nosotros.
-                Sin embargo mas parece ser que la hemos tomado como una aliada antes que a una enemiga, aún...
-            </p>
+            <img src="../image/etica3.jpg" alt="Imagen">
         </div>
-    </section>
+        <div class="column">
+          <h2>¿PORQUÉ LA INTELIGENCIA ARTIFICAL ES OMNIPRESENTE?</h2>
+          <p>La palabra omnipresente significa estar en todos lados al mismo tiempo, cosa que para referirse a la IA no esta nada alejada de la realidad; la IA no solo ha significado un cambio dentro
+            dentro de la industria, sino que amplia el horizonte en tecnología que teniamos hasta ahora, la presencia de esta herramienta no solo ha facilitado muchas tareas sino que también ha significado
+            cambios dentro de software. Claramente no todos pueden ser beneficios como aparentan, sin embargo aún
+            existen cientos de personas que opinan que la IA vino a apoderarse del mundo y en algún momento se revelaría en contra de nosotros.
+          </p>
+        </div>
+      </div>
 
     <section id="Implementacion">
         <h2>Implementacion</h2>
@@ -49,23 +51,15 @@
         <div class="container1">
             <div class="box_2">
                 <img src="../image/IBM.png" alt="Imagen" width="100" height="100">
-                <p>IBM</p>
-                <p>Su producto principal es IBM Watson</p>
             </div>
             <div class="box_2">
                 <img src="../image/sas-logo.png" alt="Imagen" width="100" height="100">
-                <p>SAS</p>
-                <p>Su producto principal es SAS Viya Model Manager </p>
             </div>
             <div class="box_2">
                 <img src="../image/datarobot_logo.png" alt="Imagen" width="150" height="100">
-                <p>DATAROBOT</p>
-                <p>Su producto principal es AutoML </p>
             </div>
             <div class="box_2">
                 <img src="../image/Microsoft-logo.jpg" alt="Imagen" width="150" height="100">
-                <p>Microsoft</p>
-                <p>Ofrece multiples servicios de IA y maching learning</p>
             </div>
         </div>
     </section>
@@ -103,7 +97,10 @@
             </div>
         </div>
     </section>
+
     <section id="Proxima">
+        <br>
+        <br>
         <div class="container3">
             <div class="text1">
                 <h2>
@@ -120,6 +117,7 @@
             </div>
         </div>
     </section>
+
     <section id="Causas">
         <div class="container4">
             <div class="text2">
@@ -137,5 +135,8 @@
         </div>
     </section>
     <button id="boton-subir"><img src="../image/flecha.png" alt="Botón de subir"></button>
+    <footer>
+        <p>Derechos de autor &copyWEKE; 2023 | Todos los derechos reservados</p>
+    </footer>
 </body>
 </html>
