Arreglos en pagina impacto
Se corrigieron errores en la ventana impacto

--- a/html/impacto.html
+++ b/html/impacto.html
@@ -130,8 +130,9 @@
         }
         #boton2 {
             position: fixed;
+            margin: -60px;
             bottom: 10px;
-            right: 210px;
+            right: 320px;
             width: 80px;
             height: 80px;
             background-color: #ffffff;
@@ -207,7 +208,7 @@
   transform: scaleX(-1);
   animation: moveWalleLeft 5s linear infinite;
   position: absolute;
-  top: 620px; /* Ajusta el valor según la posición vertical deseada */
+  top: 680px; /* Ajusta el valor según la posición vertical deseada */
   right: 1350px;
 }
 
@@ -348,6 +349,7 @@
         <br>
         <br>
         <br>
+
     </div>
     <div id="image-container">
         <img id="image" src="../image/chat.jpg" alt="Imagen">
