--- a/html/omnipresencia.html
+++ b/html/omnipresencia.html
@@ -26,7 +26,7 @@
 
     <div class="container">
         <div class="column">
-            <img src="../image/etica3.jpg" alt="Imagen">
+            <img src="../image/etica3.jpg" alt="Imagen" class="imagen-autoajustable">
         </div>
         <div class="column">
           <h2>¿PORQUÉ LA INTELIGENCIA ARTIFICAL ES OMNIPRESENTE?</h2>
