--- a/html/beneficios.html
+++ b/html/beneficios.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="icon" href="../image/walle2.png" type="image/x-icon">
     <title>Beneficios Tangibles</title>
     <link rel="stylesheet" type="text/css" href="../css/beneficiosStyle.css">
     <script src="../js/script.js"></script>
