--- a/html/home.html
+++ b/html/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="icon" href="../image/walle2.png" type="image/x-icon">
     <title>La Inteligencia Artificial al Servicio de la Sociedad</title>
     <link rel="stylesheet" type="text/css" href="../css/homeStyle.css">
 </head>
