--- a/html/omnipresencia.html
+++ b/html/omnipresencia.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <link rel="icon" href="../image/walle2.png" type="image/x-icon">
     <meta charset="UTF-8">
     <script src="../js/script.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
