--- a/html/accion.html
+++ b/html/accion.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="icon" href="../image/walle2.png" type="image/x-icon">
     <title>IA en accion</title>
     <link rel="stylesheet" href="../css/accionStyle.css">
     <script src="../js/script.js"></script>
