--- a/html/encuesta.html
+++ b/html/encuesta.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="icon" href="../image/walle2.png" type="image/x-icon">
   <title>Formulario de Experiencia con IA</title>
   <style>
     body {
