--- a/html/impacto.html
+++ b/html/impacto.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="icon" href="../image/walle2.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="../js/script.js"></script>
     <title>Impacto de la Inteligencia Artificial</title>
